--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,17 @@
 
     <div class="mt-4">
         {% if user.is_authenticated %}
-            <a href="{% url 'dashboard' %}" class="btn btn-primary">Go to Dashboard</a>
+            {% if user.is_superuser %}
+                <a href="{% url 'dashboard' %}" class="btn btn-primary">Admin Dashboard</a>
+            {% elif user.role == 'teacher' %}
+                <a href="{% url 'teacher_dashboard' %}" class="btn btn-primary">Teacher Dashboard</a>
+            {% elif user.role == 'student' %}
+                <a href="{% url 'student_dashboard' %}" class="btn btn-primary">Student Dashboard</a>
+            {% elif user.role == 'parent' %}
+                <a href="{% url 'parent_dashboard' %}" class="btn btn-primary">Parent Dashboard</a>
+            {% else %}
+                <a href="{% url 'dashboard' %}" class="btn btn-primary">Go to Dashboard</a>
+            {% endif %}
         {% else %}
             <a href="{% url 'login' %}" class="btn btn-success">Login</a>
             <a href="{% url 'register' %}" class="btn btn-warning">Sign Up</a>
